[gd_scene load_steps=7 format=3 uid="uid://co6a6tmk58gws"]

[ext_resource type="Script" path="res://scenes/menu_container.gd" id="1_5v6q7"]
[ext_resource type="Script" path="res://widgets/menu.gd" id="2_a7bh5"]
[ext_resource type="PackedScene" uid="uid://gbbsb0xe46gn" path="res://widgets/save_selection.tscn" id="3_tol3g"]
[ext_resource type="PackedScene" uid="uid://c685vb422givt" path="res://scenes/mod_menu.tscn" id="5_iqq6n"]
[ext_resource type="PackedScene" path="res://scenes/settings.tscn" id="5_oyore"]
[ext_resource type="PackedScene" uid="uid://ccjfua6enjb4b" path="res://scenes/about.tscn" id="6_x36q2"]

[node name="MenuContainer" type="Control" node_paths=PackedStringArray("startup_menu", "saves_selection", "level_selection", "mod_menu", "settings_menu", "about_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5v6q7")
startup_menu = NodePath("Menus/TitleScreen")
saves_selection = NodePath("Menus/SaveSelection")
level_selection = NodePath("")
mod_menu = NodePath("Menus/ModMenu")
settings_menu = NodePath("Menus/Settings")
about_menu = NodePath("Menus/About")

[node name="Menus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleScreen" type="CenterContainer" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_a7bh5")

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/TitleScreen"]
layout_mode = 2
offset_left = 339.0
offset_top = 175.0
offset_right = 620.0
offset_bottom = 365.0

[node name="Title" type="Label" parent="Menus/TitleScreen/VBoxContainer"]
layout_mode = 2
offset_right = 281.0
offset_bottom = 42.0
theme_type_variation = &"HeaderLarge"
text = "Open Modular Tanks"

[node name="HSeparator" type="HSeparator" parent="Menus/TitleScreen/VBoxContainer"]
layout_mode = 2
offset_top = 46.0
offset_right = 281.0
offset_bottom = 50.0

[node name="Play" type="Button" parent="Menus/TitleScreen/VBoxContainer"]
layout_mode = 2
offset_top = 54.0
offset_right = 281.0
offset_bottom = 85.0
text = "Play"

[node name="Mods" type="Button" parent="Menus/TitleScreen/VBoxContainer"]
layout_mode = 2
offset_top = 89.0
offset_right = 281.0
offset_bottom = 120.0
text = "Mods"

[node name="Settings" type="Button" parent="Menus/TitleScreen/VBoxContainer"]
layout_mode = 2
offset_top = 124.0
offset_right = 281.0
offset_bottom = 155.0
text = "Settings"

[node name="About" type="Button" parent="Menus/TitleScreen/VBoxContainer"]
layout_mode = 2
offset_top = 159.0
offset_right = 281.0
offset_bottom = 190.0
text = "About"

[node name="SaveSelection" parent="Menus" instance=ExtResource("3_tol3g")]
layout_mode = 1

[node name="ModMenu" parent="Menus" instance=ExtResource("5_iqq6n")]
visible = false
layout_mode = 1

[node name="Settings" parent="Menus" instance=ExtResource("5_oyore")]
visible = false
layout_mode = 1

[node name="About" parent="Menus" instance=ExtResource("6_x36q2")]
visible = false
layout_mode = 1

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0
text = "(this is a bug)"
horizontal_alignment = 2

[node name="ToTitleScreen" type="Button" parent="."]
layout_mode = 0
offset_right = 176.0
offset_bottom = 31.0
text = "Return to Title Screen"

[connection signal="button_up" from="Menus/TitleScreen/VBoxContainer/Play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="Menus/TitleScreen/VBoxContainer/Mods" to="." method="_on_mods_button_up"]
[connection signal="button_up" from="Menus/TitleScreen/VBoxContainer/Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="Menus/TitleScreen/VBoxContainer/About" to="." method="_on_about_button_up"]
[connection signal="button_up" from="ToTitleScreen" to="." method="_on_to_title_screen_button_up"]
